<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@drawable/img">

    <TextView
        android:id="@+id/tvAbout_Me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_me"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

    <ImageView
        android:id="@+id/ivDot"
        android:layout_width="46dp"
        android:layout_height="44dp"
        android:padding="10dp"
        android:src="@drawable/dots_white"
        android:layout_gravity="right"/>

    <TextView
        android:id="@+id/tvYour_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        />
    <TextView
        android:id="@+id/tvYour_Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_age"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        />
    <TextView
        android:id="@+id/tvYour_FatherName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_father_name"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        />
    <TextView
        android:id="@+id/tvYour_MotherName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_mother_name"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        /><TextView
        android:id="@+id/tvYour_LiveIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_Leave"
        android:textSize="20dp"
        android:textStyle="bold"
    android:layout_margin="5dp"
        /><TextView
        android:id="@+id/tvYour_fvrt_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_color"
        android:textSize="20dp"
    android:layout_margin="5dp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/btnChange1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changes"
        android:textStyle="bold"
        android:textSize="20dp"/>
    <Button
        android:id="@+id/btnChangetheme2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_theme"
        android:textStyle="bold"
        android:textSize="20dp"/>



</LinearLayout>
    </layout>