<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Change_language_Mode"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:textStyle="bold"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/rbEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/English"
        android:checked="true"
        android:textStyle="bold"
        android:textSize="20dp"/>
    <RadioButton
        android:id="@+id/rbPunjabi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Punjabi"
        android:checked="true"
        android:textStyle="bold"
        android:textSize="20dp"/>
    <RadioButton
    android:id="@+id/rbHindi"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Hindi"
    android:checked="true"
    android:textStyle="bold"
    android:textSize="20dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changes"
        android:textStyle="bold"
        android:textSize="20dp"/>

</LinearLayout>